add swagger to methods
