# docs/swagger.yaml
@@ -12,6 +12,16 @@ definitions:
     - content
     - id
     type: object
+  dto.FollowDTO:
+    properties:
+      followedID:
+        type: integer
+      followerID:
+        type: integer
+    required:
+    - followedID
+    - followerID
+    type: object
   dto.LoginDTO:
     properties:
       email:
@@ -27,6 +37,27 @@ definitions:
         type: string
       username:
         type: string
+    type: object
+  dto.UpdatePostDTO:
+    properties:
+      content:
+        type: string
+      id:
+        type: integer
+      imageURL:
+        type: string
+    required:
+    - content
+    - id
+    type: object
+  models.Follow:
+    properties:
+      followedID:
+        type: integer
+      followerID:
+        type: integer
+      id:
+        type: integer
     type: object
   models.Post:
     properties:
@@ -104,6 +135,230 @@ paths:
       summary: Регистрация пользователя
       tags:
       - users
+  /feed/global:
+    get:
+      description: Получает глобальную ленту
+      parameters:
+      - description: ограничение количества постов
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: пропуск первых n постов
+        in: query
+        name: offset
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Follow'
+            type: array
+        "400":
+          description: Invalid offset value
+          schema:
+            type: string
+        "404":
+          description: No posts in feed
+          schema:
+            type: string
+        "500":
+          description: Failed to get global feed
+          schema:
+            type: string
+      summary: Получить глобальную ленту
+      tags:
+      - feed
+  /feed/personal:
+    get:
+      description: Получает глобальную ленту
+      parameters:
+      - description: id получателя ленты
+        in: query
+        name: userid
+        required: true
+        type: integer
+      - description: ограничение количества постов
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: пропуск первых n постов
+        in: query
+        name: offset
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Follow'
+            type: array
+        "400":
+          description: Invalid offset value
+          schema:
+            type: string
+        "404":
+          description: No posts in feed
+          schema:
+            type: string
+        "500":
+          description: Failed to get personal feed
+          schema:
+            type: string
+      summary: Получить глобальную ленту
+      tags:
+      - feed
+  /follow/{id}:
+    get:
+      description: Получает все фолловы пользователя
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Follow'
+            type: array
+        "400":
+          description: Invalid JSON
+          schema:
+            type: string
+        "404":
+          description: Follows not found
+          schema:
+            type: string
+        "500":
+          description: Failed to get follows
+          schema:
+            type: string
+      summary: Получить все фолловы пользователя
+      tags:
+      - follows
+  /followers/{id}:
+    get:
+      description: Получает всех фолловеров пользователя
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Follow'
+            type: array
+        "400":
+          description: Invalid JSON
+          schema:
+            type: string
+        "404":
+          description: Followers not found
+          schema:
+            type: string
+        "500":
+          description: Failed to get followers
+          schema:
+            type: string
+      summary: Получить всех фолловеров пользователя
+      tags:
+      - follows
+  /follows:
+    delete:
+      consumes:
+      - application/json
+      description: Удаляет фоллов
+      parameters:
+      - description: Фоллов
+        in: body
+        name: followInfo
+        required: true
+        schema:
+          $ref: '#/definitions/dto.FollowDTO'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Validate error
+          schema:
+            type: string
+        "500":
+          description: Failed to delete follow
+          schema:
+            type: string
+      summary: Удалить фоллов
+      tags:
+      - follows
+    get:
+      description: Получить все фолловы
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Follow'
+            type: array
+        "404":
+          description: Follows notfound
+          schema:
+            type: string
+        "500":
+          description: Failed to get follows
+          schema:
+            type: string
+      summary: Получить список всех фолловов
+      tags:
+      - follows
+    post:
+      consumes:
+      - application/json
+      description: Фолловит человека на другого
+      parameters:
+      - description: Фоллов
+        in: body
+        name: followInfo
+        required: true
+        schema:
+          $ref: '#/definitions/dto.FollowDTO'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Validate error
+          schema:
+            type: string
+        "500":
+          description: Failed to create follow
+          schema:
+            type: string
+      summary: Создать фоллов
+      tags:
+      - follows
   /posts:
     post:
       consumes:
@@ -121,10 +376,42 @@ paths:
       responses:
         "200":
           description: OK
+        "400":
+          description: Invalid JSON
+          schema:
+            type: string
+        "500":
+          description: Failed to create posts
+          schema:
+            type: string
       summary: Создание поста
       tags:
       - posts
   /posts/{id}:
+    delete:
+      description: Удаляет пост
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Invalid ID
+          schema:
+            type: string
+        "500":
+          description: Failed to delete posts
+          schema:
+            type: string
+      summary: Удаление поста
+      tags:
+      - posts
     get:
       description: Получает пост по идентификатору
       parameters:
@@ -140,7 +427,45 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Post'
+        "400":
+          description: Invalid ID
+          schema:
+            type: string
+        "404":
+          description: Post not found
+          schema:
+            type: string
+        "500":
+          description: Failed to find posts
+          schema:
+            type: string
       summary: Получить пост по ID
+      tags:
+      - posts
+  /posts/update:
+    put:
+      description: Обновляет пост
+      parameters:
+      - description: Новые данные поста
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdatePostDTO'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Invalid JSON
+          schema:
+            type: string
+        "500":
+          description: Failed to update person
+          schema:
+            type: string
+      summary: Обновление поста
       tags:
       - posts
   /posts/user/{id}:
@@ -158,7 +483,21 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Post'
+            items:
+              $ref: '#/definitions/models.Post'
+            type: array
+        "400":
+          description: Invalid offset value
+          schema:
+            type: string
+        "404":
+          description: Posts not found
+          schema:
+            type: string
+        "500":
+          description: Failed to find posts
+          schema:
+            type: string
       summary: Получить все посты от пользователя
       tags:
       - posts
@@ -178,6 +517,18 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.User'
+        "400":
+          description: Invalid ID
+          schema:
+            type: string
+        "404":
+          description: User Not Found
+          schema:
+            type: string
+        "500":
+          description: Failed to find user
+          schema:
+            type: string
       summary: Получить пользователя по ID
       tags:
       - users
@@ -190,7 +541,13 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.User'
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
+        "500":
+          description: Failed to get users
+          schema:
+            type: string
       summary: Получить всех пользователей
       tags:
       - users
